[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scripts/OverWorld/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/OverWorld/Character/Movement.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/OverWorld/Run Script/cast.gd" type="Script" id=4]
[ext_resource path="res://Scripts/OverWorld/Create Script/showEnterScreen.gd" type="Script" id=5]
[ext_resource path="res://Scripts/OverWorld/Create Script/EnterScript/buttonPressed.gd" type="Script" id=6]
[ext_resource path="res://Art/ManaBar.tex" type="Texture" id=7]
[ext_resource path="res://Scripts/OverWorld/ManaBar/ManaBar.gd" type="Script" id=8]
[ext_resource path="res://Art/Healthbar.tex" type="Texture" id=9]
[ext_resource path="res://Art/Earth.tex" type="Texture" id=10]
[ext_resource path="res://Scripts/OverWorld/Camera/move_camera.gd" type="Script" id=11]

[node name="Node2D" type="Node2D"]

transform/pos = Vector2( 0, 1 )
script/script = ExtResource( 1 )

[node name="Character" type="Node" parent="."]

script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Character"]

transform/pos = Vector2( 509.861, 286.281 )
texture = ExtResource( 3 )

[node name="RunScript" type="Button" parent="Character/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 294.748
margin/top = 266.163
margin/right = 370.748
margin/bottom = 291.163
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Run Script"
flat = false
script/script = ExtResource( 4 )

[node name="ChangeScene" type="Button" parent="Character/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -498.25
margin/top = 263.163
margin/right = -398.25
margin/bottom = 292.163
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Change Scene"
flat = false

[node name="CreateScript" type="Button" parent="Character/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 388.747
margin/top = 265.163
margin/right = 497.747
margin/bottom = 290.163
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create Script"
flat = false
script/script = ExtResource( 5 )

[node name="EnterScript" type="LineEdit" parent="Character/Sprite/CreateScript"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = -52.0
margin/right = 109.0
margin/bottom = -28.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65
script/script = ExtResource( 6 )

[node name="Ok" type="Button" parent="Character/Sprite/CreateScript/EnterScript"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 24.0
margin/right = 55.0
margin/bottom = 44.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ok"
flat = false

[node name="Cancel" type="Button" parent="Character/Sprite/CreateScript/EnterScript"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 55.0
margin/top = 24.0
margin/right = 109.0
margin/bottom = 44.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="ManaBar" type="TextureProgress" parent="Character/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -390.0
margin/top = 277.0
margin/right = -196.0
margin/bottom = 290.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 7 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
script/script = ExtResource( 8 )

[node name="HealthBar" type="TextureProgress" parent="Character/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -390.0
margin/top = 262.0
margin/right = -192.0
margin/bottom = 274.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 9 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
script/script = ExtResource( 8 )

[node name="stop" type="Button" parent="Character/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 197.0
margin/top = 266.0
margin/right = 272.0
margin/bottom = 292.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "stop spell"
flat = false

[node name="Earth" type="Sprite" parent="."]

transform/pos = Vector2( 453.708, 188.436 )
transform/scale = Vector2( 70, 27.375 )
texture = ExtResource( 10 )

[node name="Canera" type="Node" parent="."]

script/script = ExtResource( 11 )

[connection signal="move" from="Character" to="Canera" method="_cameraUpdate"]

[connection signal="pressed" from="Character/Sprite/ChangeScene" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Character/Sprite/CreateScript/EnterScript/Ok" to="Character/Sprite/CreateScript/EnterScript" method="_on_Ok_pressed"]

[connection signal="pressed" from="Character/Sprite/CreateScript/EnterScript/Cancel" to="Character/Sprite/CreateScript/EnterScript" method="_on_Cancel_pressed"]

[connection signal="pressed" from="Character/Sprite/stop" to="Character" method="_on_stop_pressed"]


